# identicon-server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  k6.js  k6_local.js  k6_prod.js
assets/: index.html
scripts/: run.sh
src/: error.rs  errors.rs  image.rs  main.rs
src/config/: mod.rs
src/server/: image.rs  mod.rs  root.rs
tests/: version-numbers.rs
