[package]
name = "identicon-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
clap = "4.0"
identicon-rs = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1.23", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
rayon = "1.5"

[dev-dependencies]
version-sync = "0.9"

# [profile.release]
# lto = true
# codegen-units = 1
